--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,45 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>SRM Damage Assessment Tool</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f5f5f5;
-    }
-    header {
-      padding: 1rem 2rem;
-      background: #111827;
-      color: #f9fafb;
-    }
-    h1 {
-      margin: 0;
-      font-size: 1.4rem;
-    }
-    main {
-      padding: 0;
-    }
-    iframe {
-      width: 100%;
-      height: 100vh;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>SRM Damage Assessment Tool (Prototype)</h1>
-  </header>
- <iframe
-  src="https://srm-damage-assessment.streamlit.app/"
-  title="SRM Damage Assessment Tool"
-  loading="lazy"
-  style="width:100%; height:100vh; border:none;"
-></iframe>
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
 
-</body>
-</html>
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
